--- a/theme/mdbook-book-jp.css
+++ b/theme/mdbook-book-jp.css
@@ -13,8 +13,6 @@ html:lang(ja) {
     sans-serif;
   text-rendering: optimizeLegibility;
   font-kerning: normal;
-  font-feature-settings: "kern" 1, "palt" 1;
-  font-variant-east-asian: proportional-width;
   line-break: strict;
   word-break: normal;
   overflow-wrap: anywhere;
@@ -25,9 +23,9 @@ body {
   line-height: 1.8;
 }
 
-@supports (text-spacing: trim-start) {
+@supports (text-spacing-trim: trim-start) {
   html:lang(ja) {
-    text-spacing: trim-start allow-end;
+    text-spacing-trim: trim-start;
   }
 }
 
